docs: add every song route to swagger documentation
